--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@crello/react-lottie": "^0.0.11",
+    "@types/next": "^9.0.0",
     "csstype": "^3.0.8",
     "framer-motion": "^3.10.0",
     "lodash": "^4.17.20",
@@ -30,6 +31,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.6.0",
     "@types/lodash": "^4.14.168",
     "@types/react": "^18.3.1",
     "@types/styled-components": "^5.1.9",
@@ -39,7 +42,7 @@
     "commitizen": "^4.2.3",
     "cypress": "^7.1.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.21.0",
+    "eslint": "9.x",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -47,12 +50,14 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "globals": "^15.8.0",
     "husky": "4",
     "prettier": "^2.2.1",
     "ts-transformer-keys": "^0.4.3",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "typescript-eslint": "^7.16.0"
   },
   "license": "MIT",
   "config": {
